// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="marger__MargerDiv-q3lecu-0 fiYruh"
    style={null}
  >
    <img
      data-radium={true}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="marger__MargerDiv-q3lecu-0 hOWkne"
    style={null}
  >
    <div
      data-radium={true}
    >
      <div
        className="marger__MargerDiv-q3lecu-0 cporEd"
        style={null}
      >
        <h1
          className="k-Title k-Title--senary k-Title--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom title
        </h1>
      </div>
      
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<VerticalCard /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="marger__MargerDiv-q3lecu-0 fiYruh"
    style={null}
  >
    <img
      alt="Image alt"
      data-radium={true}
      src="#image"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="marger__MargerDiv-q3lecu-0 hOWkne"
    style={null}
  >
    <div
      data-radium={true}
    >
      <div
        className="marger__MargerDiv-q3lecu-0 jAJVJj"
        style={null}
      >
        <h1
          className="k-Title k-Title--senary k-Title--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom title
        </h1>
      </div>
      <div
        className="marger__MargerDiv-q3lecu-0 ksLFOn"
        style={null}
      >
        <p
          className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom text
        </p>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
